tests/negative/semantic/structure_override_signature/input.ci
structure Base {
    void ping(int x) {}
}

structure Child : Base {
    void ping(float x) {}
}

void main() {}
